Add Dao, Mpa-, Like-, Genre- Storage & Controllers