@@ -1,20 +1,26 @@
 package ru.yandex.practicum.filmorate.service;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.user.User;
+import ru.yandex.practicum.filmorate.storage.user.FriendshipStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
-@RequiredArgsConstructor
 public class UserService {
     private final UserStorage userStorage;
+    private final FriendshipStorage friendshipStorage;
+
+    public UserService(@Qualifier("userDbStorage") UserStorage userStorage, FriendshipStorage friendshipStorage) {
+        this.userStorage = userStorage;
+        this.friendshipStorage = friendshipStorage;
+    }
 
     public User getUserById(Long id) {
         return userStorage.getById(id)
@@ -34,10 +40,10 @@ public class UserService {
         return userStorage.updateUser(newUser);
     }
 
-    public User deleteUser(Long id) {
-        getUserById(id);
-        log.debug("Удаляем пользователя: {}", userStorage.getById(id));
-        return userStorage.deleteUser(id);
+    public void deleteUser(Long id) {
+        User user = getUserById(id);
+        log.debug("Удаляем пользователя: {}", user);
+        userStorage.deleteUser(id);
     }
 
     public Collection<User> getAllUsers() {
@@ -45,37 +51,73 @@ public class UserService {
     }
 
     public void addFriend(Long userId, Long friendId) {
-        User user = getUserById(userId);
-        User friend = getUserById(friendId);
+        /*
+        User friend = getUserById(friendId);*/
+
+        /*if (user.getFriendsId().contains(friendId)) {
+            return;
+        }
 
         user.getFriendsId().add(friendId);
-        friend.getFriendsId().add(userId);
+        friend.getFriendsId().add(userId);*/
+
+        User user = getUserById(userId);
+        getUserById(friendId);
+
+        user.getFriendsId().add(friendId);
+
+        friendshipStorage.addFriend(userId, friendId);
+//        friendshipStorage.addFriend(friendId, userId);
         log.debug("Пользователь {} добавил в друзья пользователя {}", userId, friendId);
     }
 
     public void deleteFriend(Long userId, Long friendId) {
-        User user = getUserById(userId);
+        /*
         User friend = getUserById(friendId);
 
+        if (user.getFriendsId().remove(friendId)) {
+            friend.getFriendsId().remove(userId);
+            friendshipStorage.removeFriend(userId, friendId);
+            friendshipStorage.removeFriend(friendId, userId);
+            log.debug("Пользователь {} удалил пользователя {} из списка друзей", userId, friendId);
+        }*/
+
+        User user = getUserById(userId);
+        getUserById(friendId);
+
         user.getFriendsId().remove(friendId);
-        friend.getFriendsId().remove(userId);
+
+        friendshipStorage.removeFriend(userId, friendId);
+//        friendshipStorage.removeFriend(friendId, userId);
         log.debug("Пользователь {} удалил пользователя {} из списка друзей", userId, friendId);
     }
 
     public List<User> getFriends(Long id) {
-        User user = getUserById(id);
-        return user.getFriendsId().stream()
-                .map(this::getUserById)
-                .toList();
+        getUserById(id);
+        return friendshipStorage.findAllFriends(id);
     }
 
     public List<User> getCommonFriends(Long userId, Long otherId) {
-        User user = getUserById(userId);
+        /*getUserById(userId);
+        getUserById(otherId);
+        return friendshipStorage.findCommonFriends(userId, otherId);*/
+
+        /*User user = getUserById(userId);
         User otherUser = getUserById(otherId);
-        return user.getFriendsId().stream()
-                .filter(otherUser.getFriendsId()::contains)
-                .map(this::getUserById)
-                .toList();
+        Set<Long> userFriends = Optional.ofNullable(user.getFriendsId())
+                .orElse(Collections.emptySet());
+        Set<Long> otherUserFriends = Optional.ofNullable(otherUser.getFriendsId())
+                .orElse(Collections.emptySet());
+
+        return userFriends.stream()
+                .filter(otherUserFriends::contains)
+                .map(userStorage::getById)
+                .flatMap(Optional::stream)
+                .collect(Collectors.toList());*/
+
+        getUserById(userId);
+        getUserById(otherId);
+        return new ArrayList<>(friendshipStorage.findCommonFriends(userId, otherId));
     }
 
     private void setNameIfEmpty(User user) {
